RESOLVED FIXED300093
[CoordinatedGraphics] Compute the layers tile size instead of using a fixed value
https://bugs.webkit.org/show_bug.cgi?id=300093
Summary [CoordinatedGraphics] Compute the layers tile size instead of using a fixed v...
Carlos Garcia Campos
Reported 2025-10-03 04:32:38 PDT
This way we can use a different logic depending on whether we are using GPU or CPU rendering for the tiles. In the case of CPU rendering we use smaller tiles of 256x26 by default, while for GPU rendering we use the visible size of the width and 1/4 of the visible height.
Attachments
Carlos Garcia Campos
Comment 1 2025-10-03 04:35:51 PDT
Radar WebKit Bug Importer
Comment 2 2025-10-10 04:33:11 PDT
EWS
Comment 3 2025-10-13 01:47:57 PDT
Committed 301398@main (51a8c38ce206): <https://commits.webkit.org/301398@main> Reviewed commits have been landed. Closing PR #51742 and removing active labels.
Ahmad Saleem
Comment 4 2025-11-13 15:22:25 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/56023
Note You need to log in before you can comment on or make changes to this bug.