Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.h
@@ -141,6 +141,7 @@ private:
     bool isCompositionRequiredOrOngoing() const override;
     void requestComposition() override;
     RunLoop* compositingRunLoop() const override;
+    int maxTextureSize() const override;
 
     // GraphicsLayerFactory
     Ref<WebCore::GraphicsLayer> createGraphicsLayer(WebCore::GraphicsLayer::Type, WebCore::GraphicsLayerClient&) override;
