Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp
@@ -97,6 +97,7 @@ ThreadedCompositor::ThreadedCompositor(LayerTreeHost& layerTreeHost)
         if (m_context && m_context->makeContextCurrent()) {
             if (!nativeSurfaceHandle)
                 m_flipY = !m_flipY;
+            glGetIntegerv(GL_MAX_TEXTURE_SIZE, &m_maxTextureSize);
         }
     });
 }
