Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositorPlayStation.h
@@ -68,6 +68,7 @@ public:
     virtual ~ThreadedCompositor();
 
     uint64_t surfaceID() const;
+    int maxTextureSize() const { return m_maxTextureSize; }
 
     void backgroundColorDidChange();
 
@@ -128,6 +129,7 @@ private:
     std::unique_ptr<WebCore::GLContext> m_context;
 
     bool m_flipY { false };
+    int m_maxTextureSize { 0 };
     std::atomic<unsigned> m_suspendedCount { 0 };
 
     std::unique_ptr<CompositingRunLoop> m_compositingRunLoop;
